--- a/hospital/templates/login.html
+++ b/hospital/templates/login.html
@@ -6,7 +6,7 @@
 <div class="login-container">
     <div class="login-form">
         <div class="login-header">
-            <i class="fas fa-hospital-alt"></i>
+            <i class="fas fa-hands"></i>
             <h1>SEIN Hospital</h1>
             <p>Management System</p>
         </div>
