--- a/hospital/templates/patients/detail.html
+++ b/hospital/templates/patients/detail.html
@@ -78,7 +78,7 @@
                 <h3><i class="fas fa-phone-alt"></i> Emergency Contact</h3>
                 <div class="info-grid">
                     <div class="info-item">
-                        <label>Contact Name:</label>
+                        <label>Contact First Name:</label>
                         <span>{{ patient.emergency_contact or 'Not provided' }}</span>
                     </div>
                     <div class="info-item">
